@@ -52,6 +52,12 @@ GDAL_BIN_DIR=/usr/local/bin
 ## (in the openModeller source code, templates can be found in src/soap/vrts)
 VRT_TEMPLATE=/etc/openmodeller/vrts/bytehfa.vrt
 
+# Directory where the pids of all running jobs will be stored as individual files
+PID_DIRECTORY=/tmp/om
+
+# Maximum number of concurrent jobs
+MAX_SHELL_JOBS=5
+
 ##### Condor specific settings #####
 
 ## Enable integration with Condor
