@@ -8,7 +8,8 @@ SVN revision: ?
 	* Compilation now requires CMake 2.6.4.
 	* New algorithm Random Forests.
 	* Web service interface now accepts a new optional parameter specifying the prediction threshold to be used when calculating area statistics during projection.
-	* Renamed envelope element in the getProjectionMetadata response of the web service API to distinguish it from the subelement. 
+	* Renamed envelope element in the getProjectionMetadata response of the web service API to distinguish it from the subelement.
+	* Added control to a maximum number of concurrent jobs on the modelling server.
 
 Release 1.1.0 (2010-02-05)
 --------------------------
